feat: create api endpoint to get user segment
